2005-09-02  Tambet Ingo  <tambet@ximian.com>

	* glib/Object.cs: Clean disposed flag from resurrected objects.

2005-09-02  Miguel de Icaza  <miguel@novell.com>

	* gtk/Application.cs (Invoke): Add new overloads to easily invoke
	methods on the executing thread.

2005-09-01  Miguel de Icaza  <miguel@novell.com>

	* gtk/Application.cs (Invoke): Add sugar to invoke a method on the
	main thread.

2005-09-02  Ben Maurer  <bmaurer@ximian.com>

	* sample/NodeViewDemo.cs: take advantage of the stuff below

	* gtk/TreeNodeValueAttribute.cs: Allow on props

	* gtk/TreeNodeAttribute.cs: Obsolete column count

	* gtk/NodeStore.cs: Change this to not need the TreeNodeAttribute
	column count. Handle fields as well as properties.

2005-08-30  Mike Kestner  <mkestner@novell.com>

	* gdk/Event.cs : add some null guarding to GetEvent.
	[Fixes #75642]

2005-08-30  Mike Kestner  <mkestner@novell.com>

	* parser/gapi_pp.pl : ignore ifndef *_H_ lines like in 1.0.x.
	[Fixes #75938]

2005-08-30  Mike Kestner  <mkestner@novell.com>

	* gtk/NodeStore.custom : recursively emit row_inserted for AddNode.
	[Fixes #75853]

2005-08-29  Mike Kestner  <mkestner@novell.com>

	* gtk/Widget.custom : add overloads for Modify* without a Gdk.Color
	param to reset color to default.  [Fixes #75913]

2005-08-28  Ben Maurer  <bmaurer@ximian.com>

	* configure.in.in: Enable doc building without mono-tools being
	built.

	* gtk/NodeSelection.cs: helper api

2005-08-27  Peter Williams  <peter@newton.cx>

	* gnome/Program.custom: Use a GLib.Argv in PersistentData to store
	a handle to argv, so that the unmanaged strings aren't freed out
	from under popt. This allows the popt context to actually be used.

2005-08-26  John Luke  <john.luke@gmail.com>

	* glib/Signal.cs: deal with obj.Handle == IntPtr.Zero
	to avoid assertions
	
2005-08-25  Mike Kestner  <mkestner@novell.com>

	* configure.in.in : move GACUTIL check forward ahead of a use.
	* Makefile.include : distcheck fixes
	* glib/Makefile.am : distcheck fixes