@@ -389,7 +389,6 @@ namespace Gtk {
 			node.Changed += new EventHandler (changed_cb);
 			node.ChildAdded += new TreeNodeAddedHandler (child_added_cb);
 			node.ChildRemoved += new TreeNodeRemovedHandler (child_deleted_cb);
-			gtksharp_node_store_emit_row_inserted (Handle, get_path_cb (node.ID), node.ID);
 
 			for (int i = 0; i < node.ChildCount; i++)
 				AddNodeInternal (node [i]);
@@ -399,6 +398,9 @@ namespace Gtk {
 		{
 			nodes.Add (node);
 			AddNodeInternal (node);
+			gtksharp_node_store_emit_row_inserted (Handle, get_path_cb (node.ID), node.ID);
+			for (int i = 0; i < node.ChildCount; i++)
+				gtksharp_node_store_emit_row_inserted (Handle, get_path_cb (node[i].ID), node[i].ID);
 		}
 
 		public void AddNode (ITreeNode node, int position)
@@ -407,6 +409,8 @@ namespace Gtk {
 			AddNodeInternal (node);
 
 			gtksharp_node_store_emit_row_inserted (Handle, get_path_cb (node.ID), node.ID);
+			for (int i = 0; i < node.ChildCount; i++)
+				gtksharp_node_store_emit_row_inserted (Handle, get_path_cb (node[i].ID), node[i].ID);
 		}
 
 		public void RemoveNode (ITreeNode node)
