@@ -1,3 +1,7 @@
+2005-09-06  Mike Kestner  <mkestner@novell.com>
+
+	* gtk/NodeStore.cs : fix recursive emit of row_inserted.
+
 2005-09-02  Tambet Ingo  <tambet@ximian.com>
 
 	* glib/Object.cs: Clean disposed flag from resurrected objects.
